--- a/listings/app/views/layouts/public.html.erb
+++ b/listings/app/views/layouts/public.html.erb
@@ -10,7 +10,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-   <nav class="navbar navbar-inverse">
+   <nav class="navbar navbar-default">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -19,7 +19,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <%= link_to 'Awesome Agency', root_path, :class => 'navbar-brand' %>
+          <!-- <a class="navbar-brand" href="#">My Real Estate Agency</a> -->
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
