--- a/listings/app/views/public/index.html.erb
+++ b/listings/app/views/public/index.html.erb
@@ -1,2 +1,25 @@
-<h1>Public#index</h1>
-<p>Find me in app/views/public/index.html.erb</p>
+<h1 class="page-heading">Gallery</h1>
+<% if @pictures.length == 0 %>
+	<div class="row">
+		<div class="col-md-12">
+			<p class="lead">No pictures found</p>
+		</div>
+	</div>
+<% else %>
+	<% @pictures.each_slice(3) do |pics| %>
+		<div class="row">
+		<% pics.each do |pic| %>
+			<div class="col-md-4">
+				<div class="thumbnail">
+					<a href="/public/<%=pic.listing.id%>/details">
+						<img src="/images/<%=pic.filename%>" class="img-responsive" alt="picture"/>
+					</a>
+					<div class="caption">
+						<h3><%= pic.title %></h3>
+					</div>
+				</div>
+			</div>
+		<% end %>
+		</div>
+	<% end %>
+<% end %>
