--- a/listings/app/views/accounts/login.html.erb
+++ b/listings/app/views/accounts/login.html.erb
@@ -1,38 +1,20 @@
-<%= form_for @user, :html => {class: 'form-horizontal'} do |f| %>
-
-	<% if @user.errors.any? %>
-		<div class="form-group">
-			<div id="error-explanation">
-			<h3>
-				<%= pluralize(@user.errors.count, "error") %>
-				prohibited this user from being saved.
-			</h3>
-			</div>
-		</div>
-	<% end %>
-
+<h1 class="page-header">Login</h1>
+<%= form_tag authenticate_url, :class => "form-horizontal" do %>
 	<div class="form-group">
-		<div class="control-label col-md-2">
-			<%= f.label :email %>
+		<div class="col-sm-2">
+			<%= label_tag :email, 'Email Address' %>
 		</div>
-		<div class="col-md-4">
-			<%= f.text_field :email, {:class => 'form-control control-md', :maxlength => '140'} %>
+		<div class="col-sm-6">
+			<%= email_field_tag :email, "", :class => 'form-control', :autofocus => "autofocus" %>
 		</div>
 	</div>
-
 	<div class="form-group">
-		<div class="control-label col-md-2">
-			<%= f.label :password %>
+		<div class="col-sm-2">
+			<%= label_tag :password, 'Password' %>
 		</div>
-		<div class="col-md-4">
-			<%= f.text_field :password, {:class => 'form-control control-md', :maxlength => '140'} %>
+		<div class="col-sm-6">
+			<%= password_field_tag :password, "", :class => 'form-control', :autofocus => "autofocus" %>
 		</div>
 	</div>
-
-	<div class="form-group">
-		<div class="col-md-12 text-center">
-			<%= f.submit "Save", class: 'btn btn-danger btn-md' %>
-		</div>
-	</div>
-
+	<%= submit_tag 'Log In', :class => 'btn btn-primary btn-md' %>
 <% end %>
