--- a/listings/app/views/accounts/logout.html.erb
+++ b/listings/app/views/accounts/logout.html.erb
@@ -1,2 +1,5 @@
-<h1>Accounts#logout</h1>
-<p>Find me in app/views/accounts/logout.html.erb</p>
+<h1>Logout
+<small><%= @user.to_s %></small>
+</h1>
+<br/>
+<%= link_to 'Login', login_path %>
