--- a/listings/app/views/layouts/application.html.erb
+++ b/listings/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<% if current_user %>
    <nav class="navbar navbar-inverse">
       <div class="container">
         <div class="navbar-header">
@@ -23,14 +24,16 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+<!--             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#contact">Contact</a></li> -->
+            <li><%= link_to current_user.to_s %></li>
+            <li><%= link_to 'Logout', logout_path %></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
     </nav>
-
+<% end %>
 <div class="container">   
 <%= yield %>
 </div><!-- /.container -->
