--- a/listings/app/views/pictures/index.html.erb
+++ b/listings/app/views/pictures/index.html.erb
@@ -3,7 +3,7 @@
 </h1>
 <div class="row">
 	<div class="col-md-12">
-		<%= link_to 'New', new_listing_picture_path, {class: 'btn btn-primary btn-md'} %>
+		<%= link_to 'New', new_user_listing_picture_path(@user), {class: 'btn btn-primary btn-md'} %>
 	</div>
 </div>
 
