--- a/listings/app/views/users/index.html.erb
+++ b/listings/app/views/users/index.html.erb
@@ -1,2 +1,41 @@
-<h1>Users#index</h1>
-<p>Find me in app/views/users/index.html.erb</p>
+<h1 class="page-heading">All Users</h1>
+<div class="row">
+	<div class="col-md-12">
+		<%= link_to 'New', new_user_path, {class: 'btn btn-primary btn-md'} %>
+	</div>
+</div>
+
+<div class="row">
+	<div class="col-md-12">
+		<% if @users.length == 0 %>
+			<p class="lead">No users found </p>
+		<% else %>
+			<table class="table table-bordered table-striped table-responsive">
+				<thead>
+					<tr>
+						<td>First Name</td>
+						<td>Last Name</td>
+						<td>Email</td>
+						<td>User Type</td>
+						<td></td>
+						<td></td>
+						<td></td>
+					</tr>
+				</thead>
+				<tbody>
+				<% @users.each do |user| %>
+					<tr>
+						<td><%= user.firstname %></td>
+						<td><%= user.lastname %></td>
+						<td><%= user.email %></td>
+						<td><%= user.usertype %></td>
+						<td><%= link_to 'Listings', user_listings_path(user) %></td>
+						<td><%= link_to 'Edit', edit_user_path(user)  %></td>
+						<td><%= link_to 'Delete', user, method: :delete, data:{confirm: 'Are you sure?'} %></td>
+					</tr>
+				<% end %>
+				</tbody>
+			</table>
+		<% end %>
+	</div>
+</div>
