--- a/listings/app/views/layouts/public.html.erb
+++ b/listings/app/views/layouts/public.html.erb
@@ -19,14 +19,15 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to 'Awesome Agency', root_path, :class => 'navbar-brand' %>
+          <%= link_to "John's Real Estate Agency", root_path, :class => 'navbar-brand' %>
           <!-- <a class="navbar-brand" href="#">My Real Estate Agency</a> -->
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+<!--             <li class="active"><a href="#">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="#contact">Contact</a></li> -->
+            <%= link_to "Realtor Login", login_path, :class => 'btn btn-default btn-xs' %>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
