--- a/listings/app/views/listings/_form.html.erb
+++ b/listings/app/views/listings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @listing, :html => {class: 'form-horizontal'} do |f| %>
+<%= form_for [@user, @listing], :html => {class: 'form-horizontal'} do |f| %>
 <% if @listing.errors.any? %>
 	<div class="form-group">
 		<div id="error-explanation">
