--- a/listings/app/views/pictures/_form.html.erb
+++ b/listings/app/views/pictures/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for [@listing, @picture], :html => {:multipart => true, :class => 'form-horizontal'} do |f| %>
+<%= form_for [@user, @listing, @picture], :html => {:multipart => true, :class => 'form-horizontal'} do |f| %>
 
 	<% if @picture.errors.any? %>
 		<div class="form-group">
